Removing scrollbar completely as its buggy and other minor fixes

--- a/src/components/EventMedia/EventMediaPresenter.scss
+++ b/src/components/EventMedia/EventMediaPresenter.scss
@@ -393,3 +393,8 @@ body {
 .react-photo-album--image {
   aspect-ratio: inherit !important;
 }
+
+.no-media {
+  width: 250px;
+  height: 250px;
+}
